# testovoe_effective_mobile

./: BMP.cpp  BMP.h  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.cpp
